--- a/web/schedule/src/app/component/navigation-lecturer/navigation-lecturer.component.scss
+++ b/web/schedule/src/app/component/navigation-lecturer/navigation-lecturer.component.scss
@@ -47,7 +47,7 @@
 }
 
 @media screen and (max-width: 500px) {
-  .navbar a {
+  .topnav a {
     float: none;
     display: block;
     width: 100%;
