--- a/web/schedule/src/app/component/navigation-student/navigation-student.component.html
+++ b/web/schedule/src/app/component/navigation-student/navigation-student.component.html
@@ -1,11 +1,11 @@
 <div class="content-container">
 <div class="topnav">
 
-  <a class="active" [routerLink]="'/feed/student'">Я</a>
-  <a [routerLink]="'/group'">Список группы</a>
-  <a [routerLink]="'/schedule'">Расписание</a>
-  <a [routerLink]="'/presence'">Пропуски</a>
-  <a [routerLink]="'/gradebook'">Зачётка</a>
+  <a [routerLink]="'/feed/student'" routerLinkActive="active">Я</a>
+  <a [routerLink]="'/group'" routerLinkActive="active">Список группы</a>
+  <a [routerLink]="'/schedule'" routerLinkActive="active">Расписание</a>
+  <a [routerLink]="'/presence'" routerLinkActive="active">Пропуски</a>
+  <a [routerLink]="'/gradebook'" routerLinkActive="active">Зачётка</a>
 
 </div>
 </div>
