--- a/web/schedule/src/app/component/gradebook/gradebook.component.scss
+++ b/web/schedule/src/app/component/gradebook/gradebook.component.scss
@@ -50,6 +50,10 @@ button {
   white-space: nowrap;
   border-spacing: 0;
 
+   tr.active {
+    background: #9c6ea6;
+  }
+
   input {
     width: 100%;
     height: 100%;
@@ -62,8 +66,10 @@ button {
     text-align: center;
     width: 300px;
   }
+
   .row:hover{
-    background-color: #9c6ea6;
+    background-color: #e3bed5;
+
   }
   .row {
     cursor: pointer;
