--- a/web/schedule/src/app/component/navigation-student/navigation-student.component.scss
+++ b/web/schedule/src/app/component/navigation-student/navigation-student.component.scss
@@ -19,7 +19,7 @@
   line-height: 25px;
   border-radius: 5px;
   width: 150px;
-
+  margin: 3px;
 }
 
 /* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
@@ -39,9 +39,6 @@
 .topnav a.active {
   background-color: #9c6ea6;
   color: white;
-  width: 40px;
-  border-right: 5px solid  #f1f1f1;
-  border-left: 5px solid  #f1f1f1;
 }
 
 @media screen and (max-width: 500px) {
