--- a/web/schedule/src/app/component/group/group.component.scss
+++ b/web/schedule/src/app/component/group/group.component.scss
@@ -36,6 +36,11 @@
       text-align: left;
     }
 
+    .row:hover{
+      background-color: rgba(178, 149, 166, 0.73);
+
+    }
+
     .row {
       cursor: pointer;
 
