--- a/web/schedule/src/app/component/presence/presence.component.html
+++ b/web/schedule/src/app/component/presence/presence.component.html
@@ -2,16 +2,27 @@
 <div class="content-container">
   <div class="presence-container">
     <form class="presence-form">
-      <table  class="presence-table">
+      <table class="presence-table">
         <tr>
           <th>Дата</th>
           <th>Предмет</th>
         </tr>
-        <tr *ngFor="let a of attendance" class="row">
+        <tr *ngFor="let a of attendance" class="row" (click)="takeAttendanceId(a.id)" [ngClass]="{active : a.id == attendanceId}">
           <td>{{a._class.date | date:"dd.MM.yyyy"}}</td>
           <td>{{a._class.schedule.subject.name}}</td>
         </tr>
       </table>
+    </form>
+    <form class="presence-form" *ngIf="isHeadman" (ngSubmit)="onSubmit()">
+      <table class="presence-table" *ngIf="received">
+        <tr class="row">
+          <td><input type="date" [(ngModel)]="newAttendance.dateClass" name="dateClass"></td>
+          <td><input type="text" [(ngModel)]="newAttendance.subjectName" name="subjectName"></td>
+        </tr>
+      </table>
+      <button type="submit" (click)="buttonType = 'add'">Добавить</button>
+      <button type="submit" (click)="buttonType = 'save'"> Сохранить</button>
+      <button type="submit" (click)="buttonType = 'delete'">Удалить</button>
     </form>
   </div>
 </div>
