--- a/web/schedule/src/app/component/presence/presence.component.scss
+++ b/web/schedule/src/app/component/presence/presence.component.scss
@@ -10,6 +10,21 @@
   font-family: Garamond, monospace;
 
 }
+button {
+  background-color: rgb(255, 231, 251);
+  border-radius: 3px;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  margin-bottom: 2em;
+  font-size: 20px;
+  cursor: pointer;
+  width: 180px;
+  height: 80px;
+  margin: 10px;
+  font-family: Garamond, monospace;
+  font-weight: bold;
+
+}
 
 .presence-container {
   padding: 20px;
@@ -17,22 +32,10 @@
   height: 100%;
 }
 
-.register-form{
+.register-form {
   align-items: center;
 }
 
-button{
-
-  border-radius: 3px;
-  -moz-border-radius: 3px;
-  -webkit-border-radius: 3px;
-  margin-bottom: 2em;
-  font-size: 20px;
-  cursor:pointer;
-  width: 180px;
-  height: 80px;
-  margin: 20px;
-}
 
 .presence-table {
 
@@ -42,16 +45,13 @@ button{
   border-collapse: collapse;
   vertical-align: top;
   max-width: 100%;
-
+  table-layout: fixed;
   overflow-x: auto;
 
   // optional - looks better for small cell values
   white-space: nowrap;
   border-spacing: 0;
-  input{
-    width: 100%;
-    height: 100%;
-  }
+
 
   th {
     padding: 12px 12px;
@@ -60,6 +60,18 @@ button{
     text-align: center;
   }
 
+  tr.active {
+    background: #9c6ea6;
+  }
+
+  input {
+    width: 100%;
+    height: 100%;
+  }
+  .row:hover{
+    background-color: rgba(178, 149, 166, 0.73);
+
+  }
   .row {
     cursor: pointer;
 
