--- a/web/schedule/src/app/component/home/home.component.html
+++ b/web/schedule/src/app/component/home/home.component.html
@@ -9,16 +9,23 @@
         <img class="displayed" src="../../../assets/lect.png" height="150" width="150"/>
       </div>
       <div class="box3">
+        <img class="displayed" src="../../../assets/odmen.png" height="150" width="150"/>
+      </div>
+      <div class="box4">
         <a [routerLink]="'/auth/student'">
           <button>Студент</button>
         </a>
       </div>
-      <div class="box4">
+      <div class="box5">
         <a [routerLink]="'/auth/lecturer'">
           <button>Преподаватель</button>
         </a>
       </div>
-
+      <div class="box6">
+        <a [routerLink]="'/auth/admin'">
+          <button>Администратор</button>
+        </a>
+      </div>
     </div>
   </fieldset>
 </div>
