--- a/web/schedule/src/app/component/home/home.component.scss
+++ b/web/schedule/src/app/component/home/home.component.scss
@@ -20,10 +20,11 @@
     margin-bottom: 5em;
     font-size: 20px;
     cursor:pointer;
-    width: 280px;
-    height: 100px;
+    width: 180px;
+    height: 80px;
     font-family: Garamond, monospace;
     font-weight: bold;
+    margin: 20px;
   }
 
   .text{
@@ -36,24 +37,28 @@
 
   .clearfix { *zoom: 1;
     background: whitesmoke;
+    min-width: 200px;
     max-width: 1000px;
     align-items: flex-start;
     margin: 0 auto;
-    height: 600px;
+    height: 500px;
+
     .wrapper {
 
       display: grid;
       grid-template-columns: repeat(2, 1fr);
-      grid-auto-rows: 250px;
+      grid-auto-rows: 50%;
 
     }
     .box1 {
+      width: auto;
       grid-column-start: 1;
       grid-column-end: 2;
       grid-row-start: 1;
       grid-row-end: 2;
     }
     .box2 {
+      width: auto;
 
       grid-column-start: 2;
       grid-column-end: 3;
@@ -61,16 +66,33 @@
       grid-row-end: 2;
     }
     .box3 {
+      width: auto;
+
+      grid-column-start: 3;
+      grid-column-end: 4;
+      grid-row-start: 1;
+      grid-row-end: 2;
+    }
+    .box4 {
+      width: auto;
 
       grid-column-start: 1;
       grid-column-end: 2;
       grid-row-start: 2;
       grid-row-end: 3;
     }
-    .box4 {
+    .box5 {
+      width: auto;
 
       grid-column-start: 2;
       grid-column-end: 3;
+      grid-row-start: 2;
+      grid-row-end: 3;
+    }
+    .box6 {      width: auto;
+
+      grid-column-start: 3;
+      grid-column-end: 4;
       grid-row-start: 2;
       grid-row-end: 3;
     }
