--- a/web/schedule/src/app/component/presence/presence.component.scss
+++ b/web/schedule/src/app/component/presence/presence.component.scss
@@ -10,6 +10,21 @@
   font-family: Garamond, monospace;
 
 }
+
+ a {
+  float: right;
+  color: black;
+  text-align: center;
+  padding: 5px;
+  text-decoration: none;
+  font-size: 20px;
+  line-height: 25px;
+   border: 1px solid #2e2328;
+   margin-bottom: 2em;
+   background-color: rgba(255, 231, 251, 0.96);
+  margin: 10px;
+ }
+
 button {
   background-color: rgb(255, 231, 251);
   border-radius: 3px;
@@ -27,7 +42,6 @@ button {
 }
 
 .presence-container {
-  padding: 20px;
   text-align: center;
   height: 100%;
 }
