--- a/web/schedule/src/app/component/auth-student/auth-student.component.scss
+++ b/web/schedule/src/app/component/auth-student/auth-student.component.scss
@@ -53,6 +53,7 @@ p {
 }
 
 button {
+  background-color: rgba(178, 149, 166, 0.96);
   align-self: center;
   border-radius: 3px;
   -moz-border-radius: 3px;
