frontend: update components

--- a/web/schedule/src/app/component/group-number/group-number.component.scss
+++ b/web/schedule/src/app/component/group-number/group-number.component.scss
@@ -62,6 +62,7 @@
 }
 
   button {
+    background-color: rgba(178, 149, 166, 0.96);
     align-self: center;
     border-radius: 3px;
     -moz-border-radius: 3px;
