--- a/web/schedule/src/app/component/navigation-student/navigation-student.component.html
+++ b/web/schedule/src/app/component/navigation-student/navigation-student.component.html
@@ -6,6 +6,7 @@
   <a [routerLink]="'/schedule'" routerLinkActive="active">Расписание</a>
   <a [routerLink]="'/presence'" routerLinkActive="active">Пропуски</a>
   <a [routerLink]="'/gradebook'" routerLinkActive="active">Зачётка</a>
+  <a class="exit" [routerLink]="'/home'" routerLinkActive="active">Выйти</a>
 
 </div>
 </div>
