--- a/web/schedule/src/app/component/home/home.component.html
+++ b/web/schedule/src/app/component/home/home.component.html
@@ -23,7 +23,7 @@
       </div>
       <div class="box6">
         <a [routerLink]="'/auth/admin'">
-          <button>Администратор</button>
+          <button>Декан</button>
         </a>
       </div>
     </div>
