--- a/web/schedule/src/app/component/auth-admin/auth-admin.component.scss
+++ b/web/schedule/src/app/component/auth-admin/auth-admin.component.scss
@@ -4,6 +4,13 @@ a {
   color: #382e33;
   text-decoration: none;
 }
+.undo {
+  text-align: left;
+  color: var(--dark);
+  font-size: 16px;
+  text-decoration-line: underline;
+  font-family: Garamond, monospace;
+}
 
 a:hover {
   text-decoration: underline;
@@ -11,7 +18,6 @@ a:hover {
 .register-hint {
   display: flex;
   align-items: center;
-  font-size: 16px;
 
   .text {
     margin: 0 5px;
@@ -22,7 +28,7 @@ a:hover {
 
   a {
     color: var(--dark);
-    font-size: 16px;
+    font-size: 20px;
     text-decoration-line: underline;
     font-family: Garamond, monospace;
   }
