--- a/web/schedule/src/app/component/register-lecturer/register-lecturer.component.html
+++ b/web/schedule/src/app/component/register-lecturer/register-lecturer.component.html
@@ -21,6 +21,9 @@
             <a [routerLink]="'/auth/lecturer'">Войти</a>
           </div>
           <button type="submit">Отправить</button>
+          <div class="auth-hint">
+            <a [routerLink]="'/home'">Вернуться назад</a>
+          </div>
         </fieldset>
 
       </form>
