--- a/web/schedule/src/app/component/register-student/register-student.component.html
+++ b/web/schedule/src/app/component/register-student/register-student.component.html
@@ -28,6 +28,9 @@
           <a [routerLink]="'/auth/student'">Войти</a>
         </div>
         <button type="submit">Отправить</button>
+          <div class="auth-hint">
+            <a [routerLink]="'/home'">Вернуться назад</a>
+          </div>
         </fieldset>
 
       </form>
