--- a/web/schedule/src/app/component/feed-student/feed-student.component.scss
+++ b/web/schedule/src/app/component/feed-student/feed-student.component.scss
@@ -49,6 +49,7 @@
       grid-auto-rows: 200px;
     }
     .box1 {
+      background: url("../../../assets/stud.png") no-repeat;
       grid-column-start: 1;
       grid-column-end: 2;
       grid-row-start: 1;
