--- a/web/schedule/src/app/component/home/home.component.scss
+++ b/web/schedule/src/app/component/home/home.component.scss
@@ -7,11 +7,22 @@
   margin: 0 auto;
   background-image: url("../../../assets/auth.jpg");
   padding: 3%;
-  a{
-      border: none;
-      padding: 10px;
+
+  a {
+    border: none;
+    padding: 10px;
   }
 
+
+
+
+  .text {
+    color: var(--dark);
+    text-align: center;
+    font-size: 26px;
+    padding: 50px;
+    font-family: Garamond, monospace;
+  }
 
   button {
     background-color: rgba(178, 149, 166, 0.96);
@@ -20,83 +31,90 @@
     -moz-border-radius: 3px;
     -webkit-border-radius: 3px;
     font-size: 20px;
-    cursor:pointer;
+    cursor: pointer;
     width: 180px;
     height: 80px;
     font-family: Garamond, monospace;
     padding: 10px;
-    margin: 30px;
 
   }
-  .text{
-    color: var(--dark);
-    text-align: center;
-    font-size: 26px;
-    padding: 50px;
-    font-family: Garamond, monospace;
-  }
 
-  .clearfix { *zoom: 1;
+  .clearfix {
+    *zoom: 1;
     background: whitesmoke;
     min-width: 200px;
     max-width: 1000px;
     align-items: flex-start;
     margin: 0 auto;
     height: 500px;
+    padding: 20px;
 
     .wrapper {
-
       display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      grid-auto-rows: 50%;
-
+      grid-template-columns: repeat(3, 200px);
+      grid-auto-rows: 200px;
     }
+
     .box1 {
-      width: auto;
+      background: url("../../../assets/stud.png")  no-repeat;
+      text-align: center;
       grid-column-start: 1;
       grid-column-end: 2;
       grid-row-start: 1;
       grid-row-end: 2;
     }
+
     .box2 {
       width: auto;
+      background: url("../../../assets/lect.png")no-repeat;
 
       grid-column-start: 2;
       grid-column-end: 3;
       grid-row-start: 1;
       grid-row-end: 2;
     }
+
     .box3 {
       width: auto;
+      background: url("../../../assets/odmen.png")no-repeat;
+      text-align: center;
 
       grid-column-start: 3;
       grid-column-end: 4;
       grid-row-start: 1;
       grid-row-end: 2;
     }
+
     .box4 {
       width: auto;
+      text-align: center;
 
       grid-column-start: 1;
       grid-column-end: 2;
       grid-row-start: 2;
       grid-row-end: 3;
     }
+
     .box5 {
       width: auto;
+      text-align: center;
 
       grid-column-start: 2;
       grid-column-end: 3;
       grid-row-start: 2;
       grid-row-end: 3;
     }
-    .box6 {      width: auto;
+
+    .box6 {
+      width: auto;
+      text-align: center;
 
       grid-column-start: 3;
       grid-column-end: 4;
       grid-row-start: 2;
       grid-row-end: 3;
     }
+
     img.displayed {
       display: block;
       margin-left: auto;
