--- a/web/schedule/src/app/component/register-student/register-student.component.scss
+++ b/web/schedule/src/app/component/register-student/register-student.component.scss
@@ -49,11 +49,12 @@ p {
   margin: 3%;
   text-align: center;
   button {
+    background-color: rgba(178, 149, 166, 0.96);
     align-self: center;
     border-radius: 3px;
     -moz-border-radius: 3px;
     -webkit-border-radius: 3px;
-    margin: 20px;
+    margin: 30px;
     padding: 10px;
     max-width: 100px;
     font-size: 16px;
