fixed, update components

--- a/web/schedule/src/app/component/auth-lecturer/auth-lecturer.component.html
+++ b/web/schedule/src/app/component/auth-lecturer/auth-lecturer.component.html
@@ -10,6 +10,9 @@
           <a [routerLink]="'/register/lecturer'">Регистрация</a>
         </div>
         <button type="submit">Войти</button>
+        <div class="register-hint">
+          <a [routerLink]="'/home'">Вернуться назад</a>
+        </div>
       </fieldset>
     </form>
   </div>
