--- a/web/schedule/src/app/component/schedule/schedule.component.scss
+++ b/web/schedule/src/app/component/schedule/schedule.component.scss
@@ -27,6 +27,12 @@
     white-space: nowrap;
     border-spacing: 0;
 
+    .day {
+      font-weight: bold;
+      background: rgba(156, 110, 166, 0.71);
+
+    }
+
     tr{
       width: 100%;
       padding: 6px 12px;
