--- a/web/schedule/src/app/component/auth-admin/auth-admin.component.html
+++ b/web/schedule/src/app/component/auth-admin/auth-admin.component.html
@@ -6,7 +6,7 @@
         <input type="text" placeholder="Логин" [(ngModel)]="admin.login" name="login">
         <input type="password" placeholder="Пароль" [(ngModel)]="admin.password" name="password">
         <button type="submit">Войти</button>
-        <div class="undo">
+        <div class="register-hint">
           <a [routerLink]="'/home'">Вернуться назад</a>
         </div>
       </fieldset>
