--- a/web/schedule/src/app/component/auth-lecturer/auth-lecturer.component.html
+++ b/web/schedule/src/app/component/auth-lecturer/auth-lecturer.component.html
@@ -3,7 +3,7 @@
     <form class="auth-form" (ngSubmit)="authenticate()">
       <fieldset class="clearfix">
         <div class="text">Вход</div>
-        <input type="text" placeholder="Номер пропуска" [(ngModel)]="authLecturer.passNumber" name="passNumber">
+        <input type="text" placeholder="Номер пропуска" [(ngModel)]="authLecturer.login" name="passNumber">
         <input type="password" placeholder="Пароль" [(ngModel)]="authLecturer.password" name="password">
         <div class="register-hint">
           <div class="text">Не зарегистрированы?</div>
