--- a/web/schedule/src/app/component/feed-lecturer/feed-lecturer.component.html
+++ b/web/schedule/src/app/component/feed-lecturer/feed-lecturer.component.html
@@ -20,7 +20,7 @@
       </div>
       <div class="box4">
         <div class="text">
-          <p>{{lecturer.mail}}</p>
+          <p>{{lecturer.email}}</p>
           <p>{{lecturer.phoneNumber}}</p>
           <p>{{lecturer.department.auditory.auditoryNumber}}</p>
         </div>
