--- a/web/schedule/src/app/component/group-schedule/group-schedule.component.html
+++ b/web/schedule/src/app/component/group-schedule/group-schedule.component.html
@@ -17,7 +17,7 @@
           </div>
         </div>
       </fieldset>
-        <table *ngIf="received && authorize" class="schedule-table">
+        <table *ngIf="received" class="schedule-table">
           <tr>
             <th></th>
             <th>Время</th>
