--- a/web/schedule/src/app/component/navigation-lecturer/navigation-lecturer.component.scss
+++ b/web/schedule/src/app/component/navigation-lecturer/navigation-lecturer.component.scss
@@ -6,8 +6,6 @@
   align-items: flex-start;
   margin: 0 auto;
   font-family: Garamond, monospace;
-  font-size: 20px;
-
 }
 
 .topnav a.exit{
@@ -22,11 +20,11 @@
   text-align: center;
   padding: 12px;
   text-decoration: none;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 25px;
   border-radius: 5px;
-  width: 120px;
-
+  width: 130px;
+  margin: 3px;
 }
 
 /* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
@@ -42,13 +40,14 @@
 
 }
 
+/* Style the active/current link*/
 .topnav a.active {
   background-color: #9c6ea6;
   color: white;
 }
 
 @media screen and (max-width: 500px) {
-  .topnav a {
+  .navbar a {
     float: none;
     display: block;
     width: 100%;
