--- a/web/schedule/src/app/component/admin-schedule/admin-schedule.component.scss
+++ b/web/schedule/src/app/component/admin-schedule/admin-schedule.component.scss
@@ -10,61 +10,49 @@
   text-align: center;
   font-size: 20px;
 
-  .schedule-container {
+  .schedule-container{
     padding: 10px;
     height: 100%;
     text-align: center;
   }
-
-  .schedule-form {
-    input[type=text] {
+  .schedule-form{
+    input {
       border: 1px solid #2e2328;
-      padding: 3px;
-      margin: 2px;
-      width: 30%;
-    }
-
-    .day {
-      font-weight: bold;
-      background: rgba(156, 110, 166, 0.71);
+      border-radius: 4px;
+      padding: 10px;
+      width: 20%;
+      margin: 10px;
 
     }
 
-    .clearfix {
-      *zoom: 2;
+    .clearfix { *zoom: 2;
       background: whitesmoke;
       max-width: 1000px;
       align-items: flex-start;
-
-      .text {
+      .text{
         color: var(--dark);
-        padding: 10px;
         font-family: Garamond, monospace;
       }
-
       .wrapper {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
       }
-
       .box1 {
         grid-column-start: 1;
         grid-column-end: 2;
         margin-left: auto;
         margin-right: auto;
         min-width: 10px;
-        margin-top: 5%;
-      }
 
+      }
       .box2 {
         grid-column-start: 2;
         grid-column-end: 3;
         margin-left: auto;
         margin-right: auto;
         min-width: 10px;
-        margin-top: 5%;
-      }
 
+      }
       .box3 {
         grid-column-start: 3;
         grid-column-end: 4;
@@ -79,9 +67,9 @@
     align-self: center;
     border-radius: 3px;
     -moz-border-radius: 3px;
-    -webkit-border-radius: 3px;
+    -webkit-border-radius: 10px;
     font-size: 20px;
-    cursor: pointer;
+    cursor:pointer;
     width: 200px;
     height: 50px;
     font-family: Garamond, monospace;
@@ -93,52 +81,60 @@
     width: 100%;
     margin-top: 4px;
     background-color: #fbfbfb;
-
     border-collapse: collapse;
     vertical-align: top;
     max-width: 100%;
-
+    table-layout: fixed;
     overflow-x: auto;
+
+    .num{
+      width: auto;
+    }
+
+    .name{
+      width: 32%;
+    }
 
     // optional - looks better for small cell values
     white-space: nowrap;
     border-spacing: 0;
 
-    input {
-      width: 100%;
-      height: 100%;
-    }
 
-    input .name {
-      width: 33%;
-      height: 100%;
-    }
-
-    tr {
-      width: 100%;
+    th {
       padding: 6px 12px;
       border: 1px solid #d9d7ce;
       font-size: 20px;
       text-align: left;
     }
 
-    th {
-
-      padding: 6px 12px;
-      border: 1px solid #d9d7ce;
-      font-size: 20px;
-    }
-
     .row {
       cursor: pointer;
+
       transition: border linear 2s;
 
       td {
+        text-align: left;
         padding: 6px 12px;
         border: 1px solid #d9d7ce;
         font-size: 20px;
 
+        .input {
+          width: 85%;
+          height: 100%;
+        }
       }
+    }
+
+    tr.active {
+      background: #9c6ea6;
+    }
+
+    .headman{
+      background: rgba(255, 65, 144, 0.75);
+    }
+
+    .row:hover{
+      background-color: rgba(178, 149, 166, 0.73);
 
     }
 
@@ -148,6 +144,5 @@
     }
 
   }
-
 
 }
