--- a/web/schedule/src/app/component/auth-lecturer/auth-lecturer.component.scss
+++ b/web/schedule/src/app/component/auth-lecturer/auth-lecturer.component.scss
@@ -1,32 +1,23 @@
 
-
-a {
-  color: #382e33;
-  text-decoration: none;
-}
-
 a:hover {
   text-decoration: underline;
 }
 .register-hint {
   display: flex;
   align-items: center;
+  font-size: 18px;
 
   .text {
     margin: 0 5px;
-
     color: var(--dark);
-    font-size: 16px;
-    font-family: Garamond, monospace;
-
+    font-size: 20px;
   }
 
   a {
     color: var(--dark);
-    font-size: 16px;
+    font-size: 18px;
     text-decoration-line: underline;
     font-family: Garamond, monospace;
-
   }
 }
 
@@ -36,23 +27,17 @@ input {
   line-height: 1.5em;
   padding: 0;
   -webkit-appearance: none;
-}
 
-p {
-  line-height: 1.5em;
 }
 
 .clearfix { *zoom: 2;
+  border: 2px solid rgba(178, 149, 166, 0.96);
   background: whitesmoke;
   max-width: 1000px;
   align-items: flex-start;
-  margin: 0 auto;
-
-} /* For IE 6/7 */
-.clearfix:before, .clearfix:after {
-  display: table;
-  content: "";
-
+  border-radius: 3px;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 20px;
 }
 
 button {
@@ -60,7 +45,7 @@ button {
   align-self: center;
   border-radius: 3px;
   -moz-border-radius: 3px;
-  -webkit-border-radius: 3px;
+  -webkit-border-radius: 10px;
   margin: 30px;
   padding: 10px;
   max-width: 100px;
@@ -75,46 +60,28 @@ button {
 /* ---------- LOGIN ---------- */
 .auth-container{
   width: 100%;
-  max-width: 1000px;
+  max-width: 1280px;
   align-items: flex-start;
   margin: 0 auto;
-  padding: 5px 5px;
-  background-color: #f9f9f9;
   min-height: calc(100vh - 50px);
-  background-image: url("../../../assets/auth.jpg");
 
 }
+
 .text{
   text-align: center;
   font-size: 26px;
   margin: 20px;
   font-family: Garamond, monospace;
-
 }
 
 #login {
   text-align: center;
   max-width: 1000px;
-  margin: 5% auto;
-  flex-direction: column;
+  margin: 0 auto;
   justify-content: center;
   background-size: cover;
-  padding: 10%;
   width: 280px;
-}
-
-#login form span {
-  background-color: #814f7b;
-  border-radius: 6px 0px 0px 6px;
-  -moz-border-radius: 3px 0px 0px 3px;
-  -webkit-border-radius: 3px 0px 0px 3px;
-  color: #664668;
-  display: block;
-  float: left;
-  height: 50px;
-  line-height: 50px;
-  text-align: center;
-  width: 50px;
+  padding: 100px;
 }
 
 #login form input {
@@ -124,13 +91,16 @@ button {
 
 #login form input[type="text"], input[type="password"] {
   background-color: white;
-  border-radius: 0px 3px 3px 0px;
-  -moz-border-radius: 0px 3px 3px 0px;
-  -webkit-border-radius: 3px 3px 3px 3px;
+  border-radius: 3px;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 10px;
   color: #2e2328;
-  margin-bottom: 1em;
-  padding: 0 16px;
+  margin-bottom: 0.8em;
+  padding: 0 10px;
   width: 280px;
+  border: 1px solid rgba(178, 149, 166, 0.96);
+  font-family: Garamond, monospace;
+  font-size: 18px;
 }
 
 #login form input:focus {
