--- a/web/schedule/src/app/component/feed-student/feed-student.component.html
+++ b/web/schedule/src/app/component/feed-student/feed-student.component.html
@@ -22,7 +22,7 @@
       </div>
       <div class="box4">
         <div class="text">
-          <p>{{me.personalCard.mail}}</p>
+          <p>{{me.personalCard.email}}</p>
           <p>{{me.personalCard.phoneNumber}}</p>
           <p>{{me.personalCard.address}}</p>
         </div>
