--- a/web/schedule/src/app/component/gradebook/gradebook.component.html
+++ b/web/schedule/src/app/component/gradebook/gradebook.component.html
@@ -1,44 +1,8 @@
-<app-navigation-student></app-navigation-student>
+<app-navigation-student *ngIf="!isLecturer"></app-navigation-student>
+<app-navigation-lecturer *ngIf="isLecturer"></app-navigation-lecturer>
 <div class="content-container">
   <div class="gradebook-container">
-    <form *ngIf="isHeadman" class="gradebook-form" >
-    <table  class="gradebook-table">
-      <tr>
-        <th>Семестр</th>
-        <th>Год</th>
-        <th>Предмет</th>
-        <th>Оценка</th>
-      </tr>
-      <tr *ngFor="let a of assessments" class="row" (click)="takeAssessmentId(a.id)" [ngClass]="{active : a.id == assessmentId}">
-        <td>{{a.session.semesterNumber}}</td>
-        <td>{{a.session.year}}</td>
-        <td>{{a.subject.name}}</td>
-        <td>{{a.mark}}</td>
-      </tr>
-    </table>
-    </form>
-    <form *ngIf="isHeadman" class="gradebook-form" (ngSubmit)="onSubmit()">
-      <table *ngIf="received" class="gradebook-table">
-      <tr  class="row">
-        <td>
-          <input type="number" [(ngModel)]="newAssessment.semesterNumber" name="semesterNumber">
-        </td>
-        <td>
-          <input type="number" [(ngModel)]="newAssessment.year" name="year">
-        </td>
-        <td>
-          <input type="text"  [(ngModel)]="newAssessment.subjectName" name="subjectName">
-        </td>
-        <td>
-          <input type="number"  [(ngModel)]="newAssessment.mark" name="mark">
-        </td>
-      </tr>
-      </table>
-      <button type="submit" (click)="buttonType = 'add'">Добавить</button>
-      <button type="submit" (click)="buttonType = 'save'"> Сохранить</button>
-      <button type ="submit" (click)="buttonType = 'delete'">Удалить</button>
-    </form>
-    <table *ngIf="!isHeadman" class="gradebook-table">
+       <table class="gradebook-table">
       <tr>
         <th>Семестр</th>
         <th>Год</th>
