--- a/web/schedule/src/app/component/register-lecturer/register-lecturer.component.html
+++ b/web/schedule/src/app/component/register-lecturer/register-lecturer.component.html
@@ -5,14 +5,15 @@
         <fieldset class="clearfix">
           <div class="text">Регистрация</div>
           <input type="text" placeholder="Номер пропуска" [(ngModel)]="verifiableRegisterLecturer.passNumber" name="passNumber">
-          <input type="text" placeholder="Имя" [(ngModel)]="verifiableRegisterLecturer.name" name="name">
           <input type="text" placeholder="Фамилия" [(ngModel)]="verifiableRegisterLecturer.surname" name="surname">
+          <input type="text" placeholder="Имя" [(ngModel)]="verifiableRegisterLecturer.name" name="name">
           <input type="text" placeholder="Отчество" [(ngModel)]="verifiableRegisterLecturer.patronymic"
                  name="patronymic">
           <input type="text" placeholder="Номер мобильного телефона" [(ngModel)]="verifiableRegisterLecturer.phoneNumber"
                  name="phoneNumber">
-          <input type="text" placeholder="mail" [(ngModel)]="verifiableRegisterLecturer.mail" name="mail">
-          <input type="text" placeholder="auditory" [(ngModel)]="verifiableRegisterLecturer.auditory" name="auditory">
+          <input type="text" placeholder="e-mail" [(ngModel)]="verifiableRegisterLecturer.email" name="email">
+          <input type="text" placeholder="Аудитория" [(ngModel)]="verifiableRegisterLecturer.auditory" name="auditory">
+          <input type="text" placeholder="Корпус" [(ngModel)]="verifiableRegisterLecturer.corpus" name="corpus">
           <input type="password" placeholder="Пароль" [(ngModel)]="verifiableRegisterLecturer.password" name="password">
           <input type="password" placeholder="Повторите пароль" [(ngModel)]="verifiableRegisterLecturer.confirmPassword"
                  name="confirm password">
