--- a/web/schedule/src/app/component/register-student/register-student.component.scss
+++ b/web/schedule/src/app/component/register-student/register-student.component.scss
@@ -28,6 +28,7 @@ a:hover {
     font-family: Garamond, monospace;
   }
 }
+
 input {
   border: none;
   font-size: 14px;
@@ -48,12 +49,16 @@ p {
   align-items: flex-start;
   margin: 3%;
   text-align: center;
+  -moz-border-radius:5px;
+  border-radius: 5px;
+  -webkit-border-radius: 20px; //edit :D
+
   button {
     background-color: rgba(178, 149, 166, 0.96);
     align-self: center;
-    border-radius: 3px;
-    -moz-border-radius: 3px;
-    -webkit-border-radius: 3px;
+    -moz-border-radius:5px;
+    border-radius: 5px;
+    -webkit-border-radius: 10px; //edit :D
     margin: 30px;
     padding: 10px;
     max-width: 100px;
@@ -76,9 +81,6 @@ p {
   max-width: 1000px;
   align-items: flex-start;
   margin: 0 auto;
-  background-image:  url("../../../assets/auth.jpg");
-  padding: 5px 5px;
-  height: 100%;
   min-height: calc(100vh - 50px);
 
 }
@@ -91,13 +93,12 @@ p {
 
 
 #register {
-
   max-width: 1000px;
   margin: 0 auto;
   flex-direction: column;
   justify-content: center;
   background-size: cover;
-  padding: 4%;
+  padding: 20px;
   width: 280px;
 }
 
@@ -125,12 +126,13 @@ p {
   margin-bottom: 1em;
   padding: 0 16px;
   width: 280px;
-
+  font-family: Garamond, monospace;
 }
 
 #register form input:focus {
   color: #2e2328;
 }
+
 
 
 
